refactor : 메소드 변경 (동일 기능의 간단한단 메소드 사용)